[gd_scene load_steps=2 format=3 uid="uid://dhpb1pv5x80hx"]

[ext_resource type="Script" path="res://test/loader_test.gd" id="1_11lme"]

[node name="LoaderTest" type="Node2D"]
script = ExtResource("1_11lme")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "SaveGame"

[node name="LoadGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LoadGame"

[node name="LoadList" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LoadList"

[connection signal="pressed" from="HBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadList" to="." method="_on_load_list_pressed"]
